# csit

./: .gitignore  README.md  Taskfile.yml  index.html
.cursor/plans/: gh_workflows_refactor_fa06e93b.plan.md  slim-vs-a2a-v2_consensus_37de84b5.plan.md  slim_vs_a2a_dag_benchmark_8b6e1f98.plan.md  streamline_gh_pages_publish_0bc69703.plan.md
.github/: release-manifest.json
.github/actions/collect-reports/: action.yaml
.github/actions/create-artifact/: action.yaml
.github/actions/deploy-ads/: action.yml
.github/actions/deploy-components/: action.yaml
.github/actions/deploy-github-pages/: action.yaml
.github/actions/detect-suite-changes/: action.yaml
.github/actions/publish-test-reports-pages/: action.yaml
.github/actions/setup-env/: action.yaml
.github/actions/setup-python/: action.yaml
.github/scripts/: build-pages-section.sh  build-pages-site.sh  build-site-landing-page.sh  download-workflow-artifact.sh  init-sources-json.sh  render-slim-integration-report.sh  resolve-pages-source-runs.sh  update-sources-json.sh
.github/workflows/: kind-slim-multicluster.yml  publish-test-reports-pages.yaml  test-a2a-slimrpc.yaml  test-a2a.yaml  test-benchmarks-slim.yaml  test-directory-conformance.yaml  test-integrations.yaml  test-samples.yaml  test-slim-benchmarks.yaml  test-slim-integration.yaml  test-slim-multicluster-private.yaml  test-slim-vs-a2a-v2.yaml  test-slim-vs-a2a.yaml
a2a-old/: index.html  report-agntcy-a2a-python-dotnet.json  report-agntcy-a2a-python-go.json  report-agntcy-a2a-python-go.xml  report-agntcy-a2a-rust-dotnet.xml  report-agntcy-a2a-rust-python.xml  report-agntcy-a2a-self-dotnet.xml  report-agntcy-a2a-self-go.json  report-agntcy-a2a-self-python.json  report-agntcy-a2a-self-rust.xml  report-agntcy-a2a.json
analitics/: README.md  Taskfile.yml  test-dashboard.html
analitics/published/: README.md  c1-evidence-summary.md  index.html
analitics/published/smoke/: README.md  suite_summary.md  technical_report.md
analitics/scripts/: evidence-lib.sh  render-c1-summary.sh  render-dashboard.sh
analitics/templates/: c1-summary.md.tmpl  dashboard.html.tmpl
benchmarks/: Taskfile.yml  go.mod  go.sum
benchmarks-old/slim/capacity/: capacity-fire-and-forget.md  ci-capacity-report.md  results-fire-and-forget.tsv  results-request-reply.tsv
benchmarks-old/slim/smoke/: ci-smoke-report.md
benchmarks/agntcy-dir/: Taskfile.yml
benchmarks/agntcy-multi-agent/: go.mod
benchmarks/agntcy-slim/: README.md  Taskfile.yml
benchmarks/agntcy-slim/scripts/: run_suite.sh
benchmarks/agntcy-slim/templates/: capacity_sweep.md.tmpl  evidence_dashboard.html  (+2 more)
benchmarks/slim-vs-a2a/: Taskfile.yml  go.mod  go.sum
benchmarks/slim-vs-a2a-v2/: Taskfile.yml  go.mod  go.sum
directory-old/: index.html
docs/: index.html  sources.json
docs/a2a/: index.html  report-agntcy-a2a-go-dotnet.json  report-agntcy-a2a-go-dotnet.xml  report-agntcy-a2a-python-dotnet.json  report-agntcy-a2a-python-dotnet.xml  report-agntcy-a2a-python-go.json  report-agntcy-a2a-python-go.xml  report-agntcy-a2a-rust-dotnet.json  report-agntcy-a2a-rust-dotnet.xml  report-agntcy-a2a-rust-python.json  report-agntcy-a2a-rust-python.xml  report-agntcy-a2a-self-dotnet.json  report-agntcy-a2a-self-dotnet.xml  report-agntcy-a2a-self-go.json  report-agntcy-a2a-self-go.xml  report-agntcy-a2a-self-python.json  report-agntcy-a2a-self-python.xml  report-agntcy-a2a-self-rust.json  report-agntcy-a2a-self-rust.xml  report-agntcy-a2a.json  report-agntcy-a2a.xml
docs/a2a-old/: report-agntcy-a2a-go-dotnet.json  report-agntcy-a2a-go-dotnet.xml  report-agntcy-a2a-python-dotnet.xml  report-agntcy-a2a-rust-dotnet.json  report-agntcy-a2a-rust-python.json  report-agntcy-a2a-self-dotnet.json  report-agntcy-a2a-self-go.xml  report-agntcy-a2a-self-python.xml  report-agntcy-a2a-self-rust.json  report-agntcy-a2a.xml
docs/a2a-slimrpc/: index.html  report-agntcy-a2a-slimrpc-go-go.json  report-agntcy-a2a-slimrpc-go-go.xml  report-agntcy-a2a-slimrpc-go-python.json  report-agntcy-a2a-slimrpc-go-python.xml  report-agntcy-a2a-slimrpc-python-go.json  report-agntcy-a2a-slimrpc-python-go.xml  report-agntcy-a2a-slimrpc-python-python.json  report-agntcy-a2a-slimrpc-python-python.xml
docs/directory/: index.html
docs/plans/: multi-cluster-slim-test-infrastructure.plan.md  slim-c1-evidence-contract-v1.md  slim-dashboard-epic.md
docs/slim-integration/: index.html  report-slim-topology.json  report-slim-topology.xml
docs/slim-multicluster-private/: index.html
integrations/: Taskfile.yml  go.mod  go.sum
integrations/agntcy-a2a/: .gitignore  README.md  Taskfile.yml
integrations/agntcy-a2a-slimrpc/: .gitignore  README.md  Taskfile.yml
integrations/agntcy-a2a/fixtures/python/: interop_python_probe.py  interop_python_server.py  pyproject.toml  requirements.txt
integrations/agntcy-a2a/fixtures/rust/: Cargo.toml
integrations/agntcy-dir/: Taskfile.yml
integrations/agntcy-slim/: Taskfile.yml  TopologyTest.md
integrations/agntcy-slim/agentic-apps/langchain_agent/: langchain_agent.py  pyproject.toml
integrations/agntcy-slim/agentic-apps/slim_examples/: Dockerfile  pyproject.toml
integrations/kind-slim-multicluster/: downstream_controller_link_test.go  slimctl_parse.go  slimctl_parse_test.go  suite_test.go
kind-slim-multi-host/: .gitignore  .tool-versions  README.md  Taskfile.yml
kind-slim-multi-host/agents/: echo-agent-client.yaml  echo-agent-server.yaml
kind-slim-multi-host/coredns/: README.md
kind-slim-multi-host/kind/: cluster-a.yaml  cluster-b.yaml
kind-slim-multi-host/scripts/: coredns-apply-cluster-b-ingress-alias.sh  discover-ingress-lb-ip-a.sh  ensure-slim-headless-service.sh  install-macos-resolver-csit.sh  render-local-dns-corefile.sh  run-cloud-provider-kind.sh  slimctl-controller-via-port-forward.sh  verify-local-dns-helper.sh
samples/crewai/simple_crew/: agent.base.json  model.json  pyproject.toml
samples/evaluation/: pyproject.toml
samples/evaluation/model/: crew.py
samples/evaluation/tests/: _deepeval.py
samples/langgraph/research/: agent.base.json  model.json  pyproject.toml
(+226 files in other folders)
