[project]
name = "simple_crew"
version = "0.1.18"
description = "simple using crewAI"
requires-python = "<3.13,>=3.10"
dependencies = ["crewai (>=1.9.3,<2.0.0)", "litellm (>=1.61.15)"]


[tool.poetry.scripts]
simple = "simple.main:run"
run_crew = "simple.main:run"
train = "simple.main:train"
replay = "simple.main:replay"
test = "simple.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
