[project]
name = "research"
version = "0.1.0"
description = ""
authors = [{ name = "Zsolt Kacsándi", email = "zkacsand@cisco.com" }]
requires-python = "<4.0,>=3.10"
readme = "README.md"

dependencies = [
    "langchain (>=1.2.8,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
