# Copyright AGNTCY Contributors (https://github.com/agntcy)
# SPDX-License-Identifier: Apache-2.0

[project]
name = "agntcy-a2a-csit-python-fixture"
version = "0.1.0"
description = "Python interop fixture for A2A CSIT"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[grpc,http-server]>=1.0.0",
    "idna==3.15",
    "requests>=2.34.2",
    "starlette==1.0.1",
    "uvicorn>=0.35.0",
]
