[package]
name = "agntcy-a2a-csit-fixtures"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
a2a = { package = "agntcy-a2a", version = "0.2.4" }
a2a-client = { package = "agntcy-a2a-client", version = "0.1.13" }
a2a-grpc = { package = "agntcy-a2a-grpc", version = "0.1.11" }
a2a-pb = { package = "agntcy-a2a-pb", version = "0.1.6" }
a2a-server = { package = "agntcy-a2a-server", version = "0.2.6" }
axum = "0.8"
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tonic = { version = "0.13", features = ["transport"] }