[package]
name = "agntcy-a2a-csit-fixtures"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
a2a = { package = "a2a-lf", version = ">=0.3" }
a2a-client = { package = "a2a-client-lf", version = ">=0.1", default-features = false }
a2a-grpc = { package = "a2a-grpc", version = ">=0.2", default-features = false }
a2a-pb = { package = "a2a-pb", version = ">=0.1" }
a2a-server = { package = "a2a-server-lf", version = ">=0.3", default-features = false }
async-trait = "0.1"
axum = "0.8"
futures = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "time"] }
tonic = { version = "0.14", features = ["transport"] }
