[tool.poetry]
name = "langchain-agent"
version = "0.0.2"
description = "Agent that retrieves weather using duckduckgo"
authors = ["Lennart Gulikers <lguliker@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^1.2.8"
langchain-community = "^0.4.1"
langchain-openai = "^1.1.7"
langgraph = "^1.0.7"
duckduckgo-search = "^7.3.0"
slim-bindings = "^0.4.0"
langgraph-checkpoint = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
