[tool.poetry]
name = "langchain-agent"
version = "0.0.2"
description = "Agent that retrieves weather using duckduckgo"
authors = ["Lennart Gulikers <lguliker@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=1.3.9"
langchain-community = "^0.4.1"
langchain-openai = "^1.1.7"
langgraph = ">1.0.10"
duckduckgo-search = "^7.3.0"
slim-bindings = "^0.4.0"
langgraph-checkpoint = "^4.0.0"
langsmith = ">=0.8.18"
langchain-core = ">=1.4.6"
idna = "3.15"
aiohttp = "3.14.1"
python-dotenv = "1.2.2"
pydantic-settings = ">=2.14.2"
requests = ">=2.34.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
